--- a/privacy.html
+++ b/privacy.html
@@ -5,11 +5,11 @@
 	  <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="font-awesome-4.7.0/css/font-awesome-animation.min.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet"/>
-    <link rel="stylesheet" type="text/css" href="css/smallerscreen.css"> 
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="assets/font-awesome-4.7.0/css/font-awesome-animation.min.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="assets/css/smallerscreen.css"> 
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <style>
       nav {
@@ -37,13 +37,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="images/catalogue.png" alt="catalogue icon"> Catalogue</a>
+              <a class="navbar-brand" href="#"><img src="assets/images/catalogue.png" alt="catalogue icon"> Catalogue</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navigation">
-                  <li><a href="#"><img src="images/home.png" id="home-icon"> Home</a></li>
-                  <li><a href="#"><img src="images/about.png" id="about-icon"> About Us</a></li>
-                  <li><a href="#"><img src="images/contact.png" id="contact-icon"> Contact Us</a></li>
+                  <li><a href="#"><img src="assets/images/home.png" id="home-icon"> Home</a></li>
+                  <li><a href="#"><img src="assets/images/about.png" id="about-icon"> About Us</a></li>
+                  <li><a href="#"><img src="assets/images/contact.png" id="contact-icon"> Contact Us</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                   <a class="btn btn-info" id="signup">SIGN UP</a>
@@ -52,7 +52,7 @@
         </div>
     </nav>
     <div style="margin-top: -20px;">
-      <img src="images/privacy.png" class="img-responsive" id="privacy">
+      <img src="assets/images/privacy.png" class="img-responsive" id="privacy">
     </div>
     <div class="container" style="padding-bottom: 40px;">
       <ul class="nav nav-tabs row">
@@ -186,17 +186,17 @@
             </div>
             <div class="col-md-3 col-sm-4 col-xs-12">
               <div id="footer-icons">
-                <a href=""><img src="images/facebook.png" class="img-responsive" alt="facebook"></a>
-                <a href=""><img src="images/twitter.png" class="img-responsive" alt="twitter"></a>
-                <a href=""><img src="images/linkedin.png" class="img-responsive" alt="linkedin"></a>
-                <a href=""><img src="images/googleplus.png" class="img-responsive" alt="googleplus"></a>
+                <a href=""><img src="assets/images/facebook.png" class="img-responsive" alt="facebook"></a>
+                <a href=""><img src="assets/images/twitter.png" class="img-responsive" alt="twitter"></a>
+                <a href=""><img src="assets/images/linkedin.png" class="img-responsive" alt="linkedin"></a>
+                <a href=""><img src="assets/images/googleplus.png" class="img-responsive" alt="googleplus"></a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </footer>
-    <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="assets/js/jquery.min.js" type="text/javascript"></script>
+    <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
 </body>
 </html>
