--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
 <body>
 	<header class="w3-container w3-white">
-    	<div class="w3-padding-24 w3-quarter w3-bar w3-mobile">	
-        		<a href="#" class="w3-bar-item w3-right"> <i class="fa fa-clipboard-list"></i> Catalogue</a>
+    	<div class="w3-padding-24 w3-quarter w3-bar">	
+        		<a href="#" class="w3-bar-item w3-right w3-mobile"> <i class="fa fa-clipboard-list"></i> Catalogue</a>
         </div>
-    	<div class="w3-padding-24 w3-half w3-bar w3-mobile">
-        	<div class="w3-right w3-mobile">
-    			<a href="#" class="w3-bar-item"><i class="fa fa-home"></i> Home</a>
-    			<a href="#" class="w3-bar-item"><i class="fa fa-address-card"></i> About Us</a>
-    			<a href="#" class="w3-bar-item"><i class="fa fa-address-book"></i> Contact Us</a>
+    	<div class="w3-padding-24 w3-half w3-bar">
+        	<div class="w3-right">
+    			<a href="#" class="w3-bar-item w3-mobile"><i class="fa fa-home"></i> Home</a>
+    			<a href="#" class="w3-bar-item w3-mobile"><i class="fa fa-address-card"></i> About Us</a>
+    			<a href="#" class="w3-bar-item w3-mobile"><i class="fa fa-address-book"></i> Contact Us</a>
     			
             </div>
         </div>
-        <div class="w3-quarter signup w3-mobile w3-bar">
-        	<a href="#" class="w3-bar-item"><img src="images/signup.png" /></a>
+        <div class="w3-quarter w3-bar">
+        	<a href="#" class="w3-bar-item w3-mobile"><img src="images/signup.png" /></a>
         </div>
     </header>
     <section class="container">
