--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     			
             </div>
         </div>
-        <div class="w3-quarter w3-bar">
-        	<a href="#" class="w3-bar-item w3-mobile"><img src="images/signup.png" /></a>
+        <div class="w3-quarter w3-bar w3-padding-24">
+        	<a href="#" class="w3-bar-item w3-mobile signup  w3-right">Sign Up</a>
         </div>
     </header>
     <section class="container">
@@ -257,6 +257,7 @@
         	<h3>Company</h3>
         	<ul>
             	<li><a href="#">FAQ</a></li>
+
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Careers</a></li>
