--- a/dashboard.html
+++ b/dashboard.html
@@ -13,24 +13,24 @@
 	<section class="wrapper" id="wrapper">
     		<div class="w3-sidebar w3-animate-left w3-bar-block w3-mobile" v-show="isOpen">
             	<a href="#" class="w3-bar-item w3-mobile w3-text-white">
-                	<b class="fa fa-4x fa-weight"></b> 
+                	<b class="fa fa-3x fa-weight"></b> 
                 	<p>Dashboard</p></a>
                 <a href="#" class="w3-bar-item w3-mobile w3-text-white"> 
-                	<b class="fa fa-4x  fa-desktop"></b>
+                	<b class="fa fa-3x  fa-desktop"></b>
                     <p>My Courses</p>
                 </a>
                 <a href="#" class="w3-bar-item w3-mobile w3-text-white">
-                	<b class="fa fa-4x fa-user-circle"></b> 
+                	<b class="fa fa-3x fa-user-circle"></b> 
                     <p>My Profile</p>
                 </a>
                 <a href="#" class="w3-bar-item w3-mobile w3-text-white"> 
-                	<b class="fa fa-4x fa-cog"></b>
+                	<b class="fa fa-3x fa-cog"></b>
                 	<p>Settings</p>
                 </a>
             </div>
             
             
-            <div class="container w3-bar-block w3-animate-right w3-white w3-right" v-bind:style="{width: !isOpen ? '100%' : '85%' }">
+            <div class="w3-mobile container w3-bar-block w3-animate-right w3-white w3-right" v-bind:style="{width: !isOpen ? '100%' : '85%' }">
             		<div class="w3-card w3-bar w3-padding-24">
                     	<div class="w3-half">
                     		<button class="toggler" @click='toggle()'><img src="images/toggler.png" /> </button>
