--- a/dashboard.html
+++ b/dashboard.html
@@ -12,18 +12,18 @@
 <body>
 	<section class="wrapper" id="wrapper">
     		<div class="w3-sidebar w3-animate-left w3-bar-block w3-mobile" v-show="isOpen">
-            	<a href="#" class="w3-bar-item w3-mobile w3-text-white w3-center">
+            	<a href="dashboard.html" class="w3-bar-item w3-mobile w3-text-white w3-center">
                 	<b class="fa fa-3x fa-weight"></b> 
                 	<p class="w3-center">Dashboard</p></a>
-                <a href="#" class="w3-bar-item w3-mobile w3-text-white w3-center"> 
+                <a href="courses.html" class="w3-bar-item w3-mobile w3-text-white w3-center"> 
                 	<b class="fa fa-3x  fa-desktop"></b>
                     <p class="w3-center">My Courses</p>
                 </a>
-                <a href="#" class="w3-bar-item w3-mobile w3-text-white w3-center">
+                <a href="profile.html" class="w3-bar-item w3-mobile w3-text-white w3-center">
                 	<b class="fa fa-3x fa-user-circle"></b> 
                     <p class="w3-center">My Profile</p>
                 </a>
-                <a href="#" class="w3-bar-item w3-mobile w3-text-white w3-center"> 
+                <a href="settings.html" class="w3-bar-item w3-mobile w3-text-white w3-center"> 
                 	<b class="fa fa-3x fa-cog"></b>
                 	<p class="w3-center">Settings</p>
                 </a>
