--- a/courses.html
+++ b/courses.html
@@ -45,6 +45,7 @@
                     </div>
                    	
                      <div class="w3-container w3-status-card">
+                     	<h3>My Courses</h3>
                     	<div class="w3-card-2 w3-mobile">
                         	<div class="w3-quarter  w3-mobile"><img src="images/image1.png" /></div>
                             <div class="w3-half w3-mobile">
