--- a/dashboard.html
+++ b/dashboard.html
@@ -104,20 +104,7 @@
                     
             </div>
     </section>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.15/vue.min.js"></script>
-    <script>
-    	new Vue({
- 		 el: '#wrapper',
-  			data: {
-    			isOpen: true
-  			},
-			methods:{
-				toggle: function(){
-            		this.isOpen = !this.isOpen
-       			}
-			}
-		});
-
-    </script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.15/vue.min.js"></script>
+    <script src="js/dashboard.js"></script>
 </body>
 </html>
