--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
 
 <!--background image-->
 
-<section class="login-canvass w-container">
+<section class="login-canvass">
 	<img src="images/bg-login-overlay.png" />
     <div class="wrapper">
   		<div class="w3-card w3-center w3-mobile">
