Refactoring Css file

--- a/theme.html
+++ b/theme.html
@@ -12,8 +12,6 @@
 	<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/smallerscreen.css"> 
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-	
-
 
 </head>
 <body>
@@ -25,13 +23,13 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#"> <i class="fa fa-clipboard-list" id="about-icon"></i>Catalogue</a>
+				<a class="navbar-brand" href="#"> <i class="fa fa-clipboard-list fa-icon-style"></i> Courses </a>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navigation">
-					<li><a href="#"><i class="fa fa-home" id="home-icon"></i> Home</a></li>
-					<li><a href="#"> <i class="fa fa-address-card" id="about-icon"></i> About Us</a></li>
-					<li><a href="#"><i class="fa fa-address-book" id="contact-icon"></i> Contact Us</a></li>
+					<li><a href="#"><i class="fa fa-home fa-icon fa-icon-style" ></i> Home</a></li>
+					<li><a href="#"> <i class="fa fa-address-card fa-icon-style" ></i> About Us</a></li>
+					<li><a href="#"><i class="fa fa-address-book fa-icon-style" ></i> Contact Us</a></li>
 				</ul> 
 				<ul class="nav navbar-nav navbar-right">
 					<a class="btn btn-info" id="signup">SIGN UP</a>
